# huttpy

./: pyproject.toml
src/huttpy/: __main__.py
src/huttpy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
