[project]
name = "huttpy"
version = "0.0.2"
description = "huttpy"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["huttpy"]

authors = [
  {name = "brokedarius", email = "-@-.org" }
]

maintainers = [
  {name = "brokedarius", email = "-@-.org" }
]

classifiers = [
  "Development Status :: 5 - Production/Stable",

  "Intended Audience :: Developers",
  
  "Topic :: Software Development :: Build Tools",

  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
  "beautifulsoup4",
  "getuseragent",
  "requests",
  "rich",
  "tomlkit",
  "yt-dlp"
]

[project.scripts]
huttpy = "huttpy.__main__:main"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"